--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,13 @@
 language: java
+jdk: oraclejdk8
+
+deploy:
+  provider: heroku
+  api_key: $HEROKU_API_KEY
+  app: nursery-api
+
+on:  
+  branch: master
+
+script: 
+- ./mvnw clean package spring-boot:run -Dspring.profiles.active=stg
