--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ deploy:
 
 on:  
   branch: master
+  
+install:
+- mvn -N io.takari:maven:wrapper
+- ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 script: 
   - mvn clean package
