--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ install:
 script: 
   - mvn clean package
   - java -jar target/nursery-api-1.0-SNAPSHOT.war
-  - mvn spring-boot:run -Dspring.profiles.active=stg
+  - mvn spring-boot:run -Dspring.profile.actives=stg
