--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,10 @@
 			<artifactId>jts</artifactId>
 			<version>1.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-spatial</artifactId>
+		</dependency>
 
 		<!-- liquibase -->
 		<dependency>
