--- a/src/main/resources/liquibase-diff.properties
+++ b/src/main/resources/liquibase-diff.properties
@@ -7,8 +7,8 @@ driver=com.mysql.jdbc.Driver
 changeLogFile=src/main/resources/db/changelog/db.changelog-master.xml
 
 # Refrance DB
-referenceUrl=jdbc:mysql://localhost:3306/nursery_
+referenceUrl=jdbc:mysql://localhost:3306/nursery_lookup
 referenceDriver=com.mysql.jdbc.Driver
 referenceUsername=root
 referencePassword=root
-diffChangeLogFile=src/main/resources/db/changelog/db.changelog-diff___.xml
+diffChangeLogFile=src/main/resources/db/changelog/db.changelog-init-lookups.xml
