--- a/src/main/resources/liquibase-diff.properties
+++ b/src/main/resources/liquibase-diff.properties
@@ -11,4 +11,4 @@ referenceUrl=jdbc:mysql://localhost:3306/nursery_lookup
 referenceDriver=com.mysql.jdbc.Driver
 referenceUsername=root
 referencePassword=root
-diffChangeLogFile=src/main/resources/db/changelog/db.changelog-init-lookups.xml
+diffChangeLogFile=src/main/resources/db/changelog/db.changelog-lookups.xml
